[package]
name = "forked"
version = "0.1.1"
authors = ["Jens Metzner <jens.metzner@uni-konstanz.de>"]
edition = "2018"
description = "`forked` is an online tool for managing exercises that use gitlab."

[dependencies]
anyhow = "1.0"
clap = "3.0.0-beta.2"
env_logger = "0.8"
log = "0.4"
reqwest = { version = "0.10", features = ["json", "cookies"] }
serde = "1.0"
serde_json = "1.0"
serde_yaml = "0.8"
thiserror = "1.0"
tokio = { version = "0.2", features = ["full"] }
tinytemplate = "1.1"
